Added generator and training scripts

--- a/train.ipynb
+++ b/train.ipynb
@@ -26,50 +26,55 @@
     "    model.train()\n",
     "    nProcessed = 0\n",
     "    finalLoss = 0\n",
-    "    finalAccu = 0\n",
+    "    listIOU = [0]\n",
     "    totL1 = 0\n",
     "    totL2 = 0\n",
     "    nTrain = len(trainLoader.dataset)\n",
     "\n",
-    "    for batch_idx, dict_ in enumerate(trainLoader):\n",
-    "        data = dict_['scan']\n",
-    "        target = dict_['mask']\n",
+    "    for batch_idx, dataDict in enumerate(trainLoader):\n",
+    "        data = dataDict['scan']\n",
+    "        target = dataDict['mask']\n",
     "        \n",
     "        data, target = data.to(device), target.to(device)\n",
     "       \n",
-    "        optimizer.zero_grad() \n",
+    "        optimizer.zero_grad()\n",
     "        output = model(data)\n",
     "\n",
-    "        criterion1 = DiceLoss()\n",
-    "        loss = criterion1(output, target)\n",
+    "        criterion = GeneralizedDiceLoss()\n",
+    "        loss = criterion(output, target)\n",
     "        \n",
     "        loss.backward()\n",
     "                \n",
     "        optimizer.step()\n",
     "\n",
     "        nProcessed += len(data)\n",
-    "        accu = 1. - loss.data\n",
-    "        finalLoss += loss.data\n",
-    "        finalAccu += accu\n",
-    "\n",
-    "        print('Train Epoch: {:.2f} [{}/{} ({:.0f}%)]\\tDiceLoss: {:.8f}\\tDiceScore: {:.8f}'.format(\n",
-    "            epoch, nProcessed, nTrain, 100. * batch_idx / len(trainLoader),\n",
-    "            loss.data, accu))\n",
     "        \n",
+    "        #Jaccard Index\n",
+    "        GT = torch.argmax(target, dim=1).cpu().numpy().astype(np.int).reshape(-1)\n",
+    "        PD = torch.argmax(output, dim=1).cpu().numpy().astype(np.int).reshape(-1)\n",
+    "        meanIOU = jaccard_score(GT, PD, labels=[0,1,2,3], average=None)\n",
+    "        \n",
+    "        listIOU.append(meanIOU)\n",
+    "        finalLoss += loss.data\n",
+    "        \n",
+    "    finalIOU = np.mean(np.stack(listIOU, axis=0), axis=0)\n",
+    "    print('Train Epoch: {} \\tDiceLoss: {:.8f}\\tMean IOU: {:.8f}'.format(\n",
+    "            epoch, finalLoss/nTotal, finalIOU))\n",
+    "    \n",
     "    nTotal = len(trainLoader)\n",
     "    if not debugFlag:\n",
-    "        trainF.write('{},{},{}\\n'.format(epoch, finalLoss/nTotal, finalAccu/nTotal))\n",
+    "        trainF.write('{},{},{}\\n'.format(epoch, finalLoss/nTotal, listIOU))\n",
     "        trainF.flush()\n",
     "    \n",
-    "    return finalAccu/nTotal, finalLoss/nTotal"
+    "    return finalIOU, finalLoss/nTotal"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydl",
+   "display_name": "Python (py36)",
    "language": "python",
-   "name": "pydl"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -81,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
